--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body class="body">
 
 <div class="shape">
-<button class="done"> <a href="quized.html" target="_blank" style="color:black ; " > quiz</a>
+<button class="done"> <a href="quized.html" style="color:black ; " > quiz</a>
 </button> 
 
-   <button class="maker"><a href="quiz_maker.html" target="_blank" style="color: black;">make quize</a>
+   <button class="maker"><a href="quiz_maker.html"style="color: black;">make quize</a>
    </button> 
 </div>
 
