--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="forhtml.css">
+        <link rel="icon" type="image/png" href="https://www.brainline.org/sites/all/modules/custom/bl_brain/images/brain-lateral.png">
+
     <meta charset="UTF-8">
     <title>quiz maker</title>
 </head>
